--- a/views/email.ejs
+++ b/views/email.ejs
@@ -53,13 +53,13 @@
               <h1
                 style="color: #64d71f; cursor: pointer; font-weight: 600; margin: 0"
               >
-                Money Saver App
+               SwipeUp App
               </h1>
             </td>
           </tr>
     
           <tr>
-            <td style="padding-top: 50px">Hey <b> Syed Hasanin </b></td>
+            <td style="padding-top: 50px">Hey <b> <%= email %> </b></td>
           </tr>
           <tr>
             <td style="padding-top: 10px; text-align: justify">
@@ -86,7 +86,7 @@
                   text-decoration: none;
                 "
                 
-                >{{otp}}</span
+                ><%= otp %></span
               >
             </td>
           </tr>
@@ -95,7 +95,7 @@
                 padding-top: 50px;
                 border-bottom: 1px dashed #5d616d;
                 padding-bottom: 50px;
-              "> <b> CEDCOSS Developer Team </b> <br/> Zoho Integration platform </td>
+              "> <b> SwipeUp Developer Team </b></td>
            
           </tr>
           <tr >
